k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bag-react
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bag-react
  template:
    metadata:
      labels:
        app: bag-react
    spec:
      securityContext:
        runAsGroup: 359
        fsGroup: 359
      containers:
        - name: react
          image: registry.rcaldas.com/boragora/react:0.0.5
          imagePullPolicy: Always
          command: ["npm", "start"]
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
            limits:
              memory: "1400Mi"
              cpu: "500m"
          volumeMounts:
            - name: src
              mountPath: /app/src
            - name: public
              mountPath: /app/public
      volumes:
        - name: src
          hostPath:
            path: /var/dev/boragora/react/src
        - name: public
          hostPath:
            path: /var/dev/boragora/react/public
      nodeSelector:
        kubernetes.io/hostname: dev
---
apiVersion: v1
kind: Service
metadata:
  name: bag-react
  namespace: dev
spec:
  selector:
    app: bag-react
  ports:
    - port: 3000
      nodePort: 30067
  type: NodePort
  externalTrafficPolicy: Local
