k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bag-react
  namespace: dev
spec:
  ports:
    - port: 3000
  selector:
    app: bag-react
