k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bag
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_token"
    nginx.ingress.kubernetes.io/limit-connections: "40"
    nginx.ingress.kubernetes.io/limit-rpm: "60"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "512m"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_body_timeout 60s;
      client_header_timeout 60s;
spec:
  tls:
    - hosts:
      - react.boragora.app
      secretName: bag-cert
  rules:
    - host: react.boragora.app
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: bag-react
              port:
                number: 3000
        - pathType: Prefix
          path: /api
          backend:
            service:
              name: bag-api
              port:
                number: 5000
